fix overflow

--- a/packages/devextreme-scss/scss/widgets/base/cardView/content_view/_index.scss
+++ b/packages/devextreme-scss/scss/widgets/base/cardView/content_view/_index.scss
@@ -1,7 +1,7 @@
 @use '../variables' as *;
 @use './content';
 
-.dx-cardview-contentview {
+.dx-gridcore-contentview {
   overflow: hidden;
   flex-grow: 1;
 }
